Bug fix
	*Changed RWD of 950px width for job-content and edu-content. Instead of changing margin which could potentially cause overlapping, the fix adjust padding-left
	*Changed default CSS back to CSS style 1

--- a/xzstyle1.css
+++ b/xzstyle1.css
@@ -389,11 +389,11 @@ h2.modal-header {
 	}
 
 	div.job-content {
-		margin: 0px 0px 0px 100px;
+		padding-left: 20px;
 	}
 
 	div.edu-content {
-		margin: 0px 0px 0px 100px;
+		padding-left: 20px;
 	}
 
 	p.mcp-cer-date {
